Fix layout of search results on small devices.

--- a/app/assets/stylesheets/search_result.css.scss
+++ b/app/assets/stylesheets/search_result.css.scss
@@ -3,6 +3,9 @@
     padding: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
+    &:last-child {
+      border-bottom: none;
+    }
     .meta {
       display: inline-block;
       .title {
